--- a/src/postcontainer/individualpost/individualpost.css
+++ b/src/postcontainer/individualpost/individualpost.css
@@ -1,11 +1,31 @@
 #indiCont{
     width: 40vw;
-    height: 40vh;
+    height: 80vh;
     position: relative;
     background-position: center;
     background-size: cover;
 }
 
-#indiCont img{
-    max-width: 100%;
+#titles{
+    text-align: left;
+    color: white;
+    width: 100%;
+    position: absolute;
+    margin-left: 0;
+    margin-top: 0;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.1));
+}
+p{
+    position: absolute;
+    bottom: 0;
+    opacity: 0;
+    height: 0px;
+    transition: height .5s;
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.1));
+    width: 100%;
+    color: white;
+}
+.show-caption p{
+    height: fit-content;
+    opacity: 1;
 }
