--- a/src/postcontainer/individualpost/individualpost.css
+++ b/src/postcontainer/individualpost/individualpost.css
@@ -4,6 +4,7 @@
     position: relative;
     background-position: center;
     background-size: cover;
+    margin: 50px auto;
 }
 
 #titles{
@@ -13,7 +14,8 @@
     position: absolute;
     margin-left: 0;
     margin-top: 0;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.1));
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.2));
+    line-height: 2vh;
 }
 p{
     position: absolute;
