--- a/src/postcontainer/individualpost/individualpost.css
+++ b/src/postcontainer/individualpost/individualpost.css
@@ -16,6 +16,10 @@
     margin-top: 0;
     background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.2));
     line-height: 2vh;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    
 }
 #caption{
     position: absolute;
@@ -23,7 +27,7 @@
     opacity: 0;
     height: 0px;
     transition: height .5s;
-    background: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.1));
+    background: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.3));
     width: 100%;
     color: white;
 }
@@ -35,4 +39,8 @@
     position: absolute;
     height: 15px;
     bottom: -15px;
+}
+#ownerName{
+    display: flex;
+    flex-direction: column;
 }
