too tired to keep working so I guess this is it

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,17 @@
+body{
+  background-color: rgb(66, 65, 65);
+  color: white;
+
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .App {
   text-align: center;
+}
+.css-mmst5v {
+  width: 100%;
+  background-color: black;
 }
 
 .App-logo {
@@ -7,22 +19,8 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+
 
 .App-link {
   color: #61dafb;
