--- a/src/postcontainer/individualpost/individualpost.css
+++ b/src/postcontainer/individualpost/individualpost.css
@@ -5,6 +5,7 @@
     background-position: center;
     background-size: cover;
     margin: 50px auto;
+    border: 8px rgb(53, 54, 122);
 }
 
 #titles{
@@ -30,6 +31,7 @@
     background: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.3));
     width: 100%;
     color: white;
+    font-size: x-large;
 }
 .show-caption #caption{
     height: fit-content;
